test: hot use master cert

--- a/charts/elasticsearch-cluster/values.yaml
+++ b/charts/elasticsearch-cluster/values.yaml
@@ -83,6 +83,40 @@ es-data-hot:
     #   - secretName: elasticsearch.setme.org-tls
     #     hosts:
     #       - elasticsearch.setme.org
+  createCert: false
+  extraVolumes: |
+    - name: elasticsearch-certs
+      secret:
+        secretName: my2-elasticsearch-cluster-master-certs
+    - name: plugindir
+      emptyDir: {}
+  extraEnvs:
+    - name: xpack.security.enabled
+      value: "true"
+    - name: xpack.security.transport.ssl.enabled
+      value: "true"
+    - name: xpack.security.http.ssl.enabled
+      value: "true"
+    - name: xpack.security.transport.ssl.verification_mode
+      value: "certificate"
+    - name: xpack.security.transport.ssl.key
+      value: "/usr/share/elasticsearch/config/certs/tls.key"
+    - name: xpack.security.transport.ssl.certificate
+      value: "/usr/share/elasticsearch/config/certs/tls.crt"
+    - name: xpack.security.transport.ssl.certificate_authorities
+      value: "/usr/share/elasticsearch/config/certs/ca.crt"
+    - name: xpack.security.http.ssl.key
+      value: "/usr/share/elasticsearch/config/certs/tls.key"
+    - name: xpack.security.http.ssl.certificate
+      value: "/usr/share/elasticsearch/config/certs/tls.crt"
+    - name: xpack.security.http.ssl.certificate_authorities
+      value: "/usr/share/elasticsearch/config/certs/ca.crt"
+  extraVolumeMounts:
+    - name: elasticsearch-certs
+      mountPath: /usr/share/elasticsearch/config/certs
+      readOnly: true
+    - mountPath: /usr/share/elasticsearch/plugins/
+      name: plugindir
 
 es-data-warm:
   <<: *defaults
