feat(elasticsearch-cluster): enable login with credentials + put users in setup job + remove xpack related comments

--- a/charts/elasticsearch-cluster/templates/ilm-job-setup.yaml
+++ b/charts/elasticsearch-cluster/templates/ilm-job-setup.yaml
@@ -39,12 +39,12 @@ spec:
             - name: "ELASTICSEARCH_USERNAME"
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.users.elasticsearchCredentialSecret }}
+                  name: {{ include "elasticsearch-cluster.elasticsearch-credentials" . }}
                   key: username
             - name: "ELASTICSEARCH_PASSWORD"
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.users.elasticsearchCredentialSecret }}
+                  name: {{ include "elasticsearch-cluster.elasticsearch-credentials" . }}
                   key: password
           command:
             - /bin/sh
